--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/postcss": "^4.0.3",
     "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.6",
     "next": "15.1.6",
     "next-auth": "^5.0.0-beta.25",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.8",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "prettier": "^3.4.2",
