--- a/package.json
+++ b/package.json
@@ -12,25 +12,30 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
-    "@tailwindcss/postcss": "^4.0.3",
-    "bcryptjs": "^2.4.3",
+    "@tailwindcss/postcss": "^4.0.6",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/blob": "^0.27.1",
+    "bcryptjs": "^3.0.1",
+    "date-fns": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.9.6",
-    "next": "15.1.6",
+    "mongoose": "^8.10.1",
+    "next": "^15.1.7",
     "next-auth": "^5.0.0-beta.25",
-    "postcss": "^8.5.1",
+    "postcss": "^8.5.2",
     "react": "^19.0.0",
+    "react-datepicker": "^8.1.0",
     "react-dom": "^19.0.0",
+    "react-easy-crop": "^5.2.0",
     "react-icons": "^5.4.0",
-    "resend": "^4.1.1",
-    "tailwindcss": "^4.0.3"
+    "resend": "^4.1.2",
+    "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
-    "prettier": "^3.4.2",
+    "@types/react-dom": "^19.0.4",
+    "prettier": "^3.5.1",
     "prettier-plugin-tailwindcss": "^0.6.11"
   }
 }
