--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "@vercel/blob": "^0.27.1",
     "bcryptjs": "^3.0.1",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.1",
-    "next": "^15.1.7",
+    "next": "^15.2.0",
     "next-auth": "^5.0.0-beta.25",
     "postcss": "^8.5.2",
     "react": "^19.0.0",
