--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,9 @@
 {
-    "plugins": ["prettier-plugin-tailwindcss"],
-    "tailwindStylesheet": "./app/globals.css"
+	"plugins": ["prettier-plugin-tailwindcss"],
+	"tailwindStylesheet": "./app/globals.css",
+	"tabWidth": 4,
+	"useTabs": true,
+	"objectWrap": "collapse",
+	"arrowParens": "avoid",
+	"trailingComma": "none"
 }
