--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "next lint",
+		"test": "jest"
 	},
 	"dependencies": {
 		"@headlessui/react": "^2.2.0",
@@ -32,11 +33,17 @@
 		"tailwindcss": "^4.0.9"
 	},
 	"devDependencies": {
+		"@testing-library/dom": "^10.4.0",
+		"@testing-library/jest-dom": "^6.6.3",
+		"@testing-library/react": "^16.2.0",
 		"@types/bcryptjs": "^2.4.6",
 		"@types/jsonwebtoken": "^9.0.9",
 		"@types/react": "^19.0.10",
 		"@types/react-dom": "^19.0.4",
+		"jest": "^29.7.0",
+		"jest-environment-jsdom": "^29.7.0",
 		"prettier": "^3.5.3",
-		"prettier-plugin-tailwindcss": "^0.6.11"
+		"prettier-plugin-tailwindcss": "^0.6.11",
+		"ts-node": "^10.9.2"
 	}
 }
