--- a/package.json
+++ b/package.json
@@ -37,11 +37,13 @@
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/react": "^16.2.0",
 		"@types/bcryptjs": "^2.4.6",
+		"@types/jest": "^29.5.14",
 		"@types/jsonwebtoken": "^9.0.9",
 		"@types/react": "^19.0.10",
 		"@types/react-dom": "^19.0.4",
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
+		"jest-fetch-mock": "^3.0.3",
 		"prettier": "^3.5.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
 		"ts-node": "^10.9.2"
