--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Install Jest
+        run: npm install --global jest
       - name: Run Tests
         run: npm test
       - name: Install Vercel CLI
