--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
 		"tailwindcss": "^4.0.9"
 	},
 	"devDependencies": {
+		"@babel/preset-env": "^7.26.9",
+		"@babel/preset-react": "^7.26.3",
 		"@testing-library/dom": "^10.4.0",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/react": "^16.2.0",
