--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,1 @@
-{
-	"presets": [
-		"next/babel",
-		"@babel/preset-react",
-		"@babel/preset-env"
-	],
-	"plugins": []
-}
+{ "presets": ["next/babel"], "plugins": [] }
